# unicrowd

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/server/: Cargo.toml
apps/server/migrations/2024-11-08-142642_initial/: up.sql
apps/server/src/: main.rs  models.rs  schema.rs
apps/server/src/api/: endpoints.rs  models.rs
apps/server/src/core/: database.rs  mod.rs  tickets.rs
